update: Collectors.toList() -> Stream.toList() (now return immutable lists)